refactor files handler to work with batch files
